mr.tiskin.endofmarch

--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -1002,4 +1002,243 @@
     \textbf{Алгоритм Шенхаге-Штрассена.} Основная мысль состоит в том, что мы разбиваем $a$ и $b$ на разряды правильно выбранной длины $l$ и рассматриваем каждый разряд как коэффициент полинома, всего $n/l$ коэффициентов в каждом полиноме. Используем быстрое преобразование Фурье для их умножения. Попарное умножение значений полиномов выполняется рекурсивно, затем учитываются переносы. Сам алгоритм, ну там пиздец намешали и КТО, и косоциклическую свёртку, и Карацубу. В сухом итоге, трудоёмкость - $O(n\log n \log \log n)$.
 \end{alg}
 
+\section{Параллельные алгоритмы.}
+
+\subsection{Базовые определения и понятия.}
+
+\begin{defn}
+    \textit{Схема} (вычислительная) - ориентированный ациклический граф (dag), с фиксированным количеством входов и выходов. Вычисления неадаптивны (oblivious): последовательность операций не зависит от входа. \ 
+
+    Вычисления над переменным количеством входов: (бесконечное) \textit{семейство схем}. Семейство схем с конечным описанием - \textit{алгоритм}.
+\end{defn}
+
+\begin{defn}
+    \textit{Размер} схемы - количество узлов, \textit{глубина} - максимальная длина пути от входа до выхода.
+\end{defn}
+
+\begin{defn}
+    \textit{Схема сравнения} - схема, которой узлы - \textit{элементы сравнения}. Сама схема выглядит как куча вертикальных полосок и перпендикулярных им отрезочков, которые соединяют некоторые пары длинных линий. Вертикальные линии - элементы сравнения, а отрезочки - сами операции сравнения.
+\end{defn}
+
+\begin{defn}
+    \textit{Схема слияния} - схема сравнения, которая берёт на вход две отсортированные последовательности и на выходе даёт отсортированную последовательность из всех их элементов.
+\end{defn}
+
+\begin{defn}
+    \textit{Схема сортировки} - схема сравнения, у которой на входе произвольная последовательность, а на выходе - отсортированная последовательность.
+\end{defn}
+
+\begin{remark}
+    Семейство схем с конечным описанием - алгоритм сортировки. Их размер и глубина - последовательная и параллельная сложность алгоритма. 
+\end{remark}
+
+\subsection{Больше о сортировках и слияниях.}
+
+\begin{theorem}
+    \textbf{Принцип нулей-единиц.} Схема сравнения является сортирующей тогда и только тогда, когда она сортирует все последовательности нулей и единиц.
+\end{theorem}
+
+\begin{proof}
+    В одну сторону очевидно, в обратную пойдём от противного, ничего сложного.
+\end{proof}
+
+\begin{remark}
+    Между прочим, очень применимая хуйня. Ей можно проверять сеть сортировки путём проверки только $2^n$ входных последовательностей, а не $n!$. А также, сеть слияния путём проверки $(n'+1)(n''+1)$ вместо много.
+\end{remark}
+
+\begin{alg}
+    \textbf{Чётно-нечётное слияние (OEM).} Если $n'=n''=1$, то сравниваем $(x_1, y_1)$, иначе рекурсивно
+
+    \begin{itemize}
+        \item слияние $\langle x_1, x_3, \ldots \rangle , \langle y_1, y_3, \ldots \rangle$; 
+        \item слияние $\langle x_2, x_4, \ldots \rangle , \langle y_2, y_4, \ldots \rangle$;
+        \item попарное сравнение: $(u_2, v_1), (u_3, v_2), \ldots$
+    \end{itemize}
+
+    Размер - $O(n\log n)$, глубина - $O(\log n)$. 
+\end{alg}
+
+\begin{proof}
+    Доказательство корректности приводится посредством индукции.
+\end{proof}
+
+\begin{alg}
+    \textbf{Сортировка нечётно-чётным слиянием.} Если $n=1$ - останавливаемся, иначе рекурсивно
+
+    \begin{itemize}
+        \item сортировка $\langle x_1, \ldots, x_{\lceil n/2 \rceil} \rangle$; 
+        \item сортировка второй половины; 
+        \item слияние результатов при помощи OEM.
+    \end{itemize}
+
+    Размер - $O(n(\log n)^2)$, глубина - $O((\log n)^2)$.
+\end{alg}
+
+\begin{defn}
+    \textit{Битонная последовательность}: $\langle x_1 \geq \ldots \geq x_m \leq \ldots \leq x_n \rangle$, $1\leq m \leq n$.
+\end{defn}
+
+\begin{alg}
+    \textbf{Битонное слияние (BM)}: сортировка битонной последовательности. Если $n=1$ - останавливаемся, иначе рекурсивно
+
+    \begin{itemize}
+        \item битонное слияние $\langle x_1, x_3, \ldots \rangle $ в упорядоченную последовательность; 
+        \item аналогично по чётным; 
+        \item попарное сравнение $(u_1, v_1), (u_2, v_2), \ldots$. 
+    \end{itemize}
+
+    Размер - $O(n \log n)$, глубина $O(\log n)$. 
+\end{alg} \ 
+
+\begin{alg}
+    \textbf{Сортировка битонным слиянием.} Если $n=1$ - останавливаемся, иначе рекурсивно
+
+    \begin{itemize}
+        \item сортируем первую половину в обратном порядке; 
+        \item сортируем вторую половину в прямом порядке; 
+        \item битонное слияние.
+    \end{itemize}
+
+    Размер - $O(n(\log n)^2)$, глубина $O((\log n)^2)$.
+\end{alg}
+
+\begin{prob}
+    Возможна ли неадаптивная сортировка схемой размера $o(n(\log n)^2)$? $O(n \log n)$?
+\end{prob}
+
+\begin{alg}
+    \textbf{Схема AKS.} Размер - $O(n \log n)$, глубина - $O(\log n)$. Использует глубокие понятия теории графив (\textit{экспандеры}). Асимптотически оптимальна, но имеет огромный константный множитель.
+\end{alg}
+
+\subsection{Модели параллельных вычислений.}
+
+\begin{alg}
+    \textbf{Parallel Random Access Machine (PRAM).} Простая, идеализированная модель общих параллельных вычислений, включающая неограниченное количество \textit{процессоров} (1 операция за единицу времени), и глобальную общую память. Вычисления полностью синхронны. Само вычисление $PRAM$ - последовательность параллельных \textit{шагов}, коммуникауия и синхронизация считаются ''бесплантыми'', однако эта хрень очень трудно реализуется на практике. \ 
+
+    Варианты PRAM: 
+
+    \begin{itemize}
+        \item concurrent/exclusive read;
+        \item concurent/exclusive write.
+    \end{itemize}
+\end{alg}
+
+\begin{alg}
+    \textbf{Bulk-Synchronous Parallel (BSP) computer.} Простая, реалистичная модель общих параллельных вычислений - масштабируемая, переносимая, предсказуемая. Включает $p$ процессоров, каждый с \textit{локальной памятью} (1 операция за единицу времени), \textit{коммуникационную среду}, состоящую из сети и (возможно) \textit{внешней памяти} (1 единица данных за $g$ единиц времени), и маханизм \textit{барьерной синхронизации} (не чаще 1 раза за $l$ единиц времени). \ 
+
+    Примеры коммуникационной среды:
+
+    \begin{itemize}
+        \item $g$ - \textit{communication gap} (inverse bandwidth), время (в худшем случае) для единицы данных войти в сеть или покинуть сеть; 
+        \item $l$ - \textit{latency}, время (в худшем случае) для единицы данных быть переданной внутрь сети.
+    \end{itemize}
+
+    Вычисление BSP - последовательность параллельных \textit{супершагов}. Сначала происходят вычисления / коммуникация внутри шага (коммуникация включает обмен данными с внешней памятью), а затем происходит синхронизация между супершагами. \ 
+
+    Альтернативная модель - CSP, взаимодействующие последовательные процессы.
+\end{alg}
+
+\begin{remark}
+    Рассмотрим композиционную модель стоимости вычислений. Для конкретного процессора $proc$ на супершаге $sstep$:
+
+    \begin{itemize}
+        \item $comp(sstep, proc)$ - объём локальных вычислений и операций над локальной памятью процессора $proc$ на супершаге $sstep$; 
+        \item $comm(sstep, proc)$ - объём данных, отправленных и полученных процессором $proc$ на супершаге $sstep$.
+    \end{itemize}
+
+    Для компьютера BSP в целом на одном супершаге $sstep$:
+
+    \begin{itemize}
+        \item $comp(sstep)=\max_{0\leq proc < p}comp(sstep, proc)$; 
+        \item $comm(sstep)=\max_{0\leq proc <p}comm(sstep, proc)$; 
+        \item $cost(sstep)=comp(sstep)+comm(sstep)\cdot g+l$.
+    \end{itemize}
+
+    Для вычисления BSP, состоящего из sync супершагов:
+
+    \begin{itemize}
+        \item $comp-\sum_{0\leq sstep <sync}comp(sstep)$; 
+        \item $comm=\sum_{0\leq sstep < sync}comm(sstep)$; 
+        \item $cost = comp+comm\cdot g+sync\cdot l$. 
+    \end{itemize}
+
+    Входные или выходные данные хранятся во внешней памяти, стоимость ввода / вывода включена в $comm$.
+\end{remark}
+
+\begin{remark}
+    Что касается разработки алгоритмов для BSP. Нас интересует минимизация $comp$, $comm$, $sync$ как функций от $n$, $p$. \\
+    
+    Соглашения: 
+
+    \begin{itemize}
+        \item размер задачи $n \gg p$ (\textit{допуск}); 
+        \item входные или выходные во внейшней памяти, ввод или вывод - односторонние коммуникации.
+    \end{itemize}
+
+    Баланс вычислений:
+
+    \begin{itemize}
+        \item \textit{work-optimal} $comp=O(\frac{seq \: work}{p})$.
+    \end{itemize}
+
+    Баланс коммуникации:
+
+    \begin{itemize}
+        \item цель \textit{scalable} $comm = O(\frac{iinput+output}{p^c})$, $o<c\leq 1$; 
+        \item в идеале $fully-scalable$, $c=1$.
+    \end{itemize}
+
+    Крупоблочность:
+
+    \begin{itemize}
+        \item цель - $sync$, не зависящая от $n$ (может зависеть от $p$); 
+        \item ещё лучше - \textit{quasi-flat} $sync=O((\log p)^{O(1)})$; 
+        \item в идеале - \textit{flat} $sync=O(1)$. 
+    \end{itemize}
+\end{remark}
+
+\subsection{Всякая хуйня.}
+
+\begin{alg}
+    Схема на основе \textit{сбалансированного двоичного дерева} - tree(n), 1 вход, $n$ выходов (или наоборот). Размер - $n-1$, глубина - $\log n$. Каждый узел вычисляет произвольно заданную операцию за $O(1)$. Последовательная сложность - $O(n)$, сложность на PRAM - $O(\log n)$. Строим равномерно распределяя одинаковые количества операций на процессоры ($n/p$). \ 
+    
+    Описанный на лекциях BSP-алгоритм вычисления сбалансированнного дерева полностью оптимален:
+
+    \begin{itemize}
+        \item оптимальное $comp=O(n/p)=O(\frac{sequential \: work}{p})$; 
+        \item оптимальное $comm = O(n/p)=O(\frac{input/output \: size}{p})$; 
+        \item оптимальное $sync=O(1)$. 
+    \end{itemize}
+\end{alg}
+
+\begin{prob}
+    Задача \textit{префиксного накомпления}. Пусть нам дан массив $a=[a_0, \ldots, a_{n-1}]$. Нам нужно вычислить $b_{-1}=0$, а точнее $b_i=a_i+b_{i-1}$ для $0\leq i < n$. В более общем виде нуль заменяется на какой-то элемент, а сложение - на любой ассоциативный оператор.
+\end{prob}
+
+\begin{alg}
+    Схема \textit{префиксного накопления} - prefix($n$) - красивая вещь, которая позволяет справиться с поставленной задачей за размер $2n-2$, глубину $2 \log n$ и сложность на PRAM - $O(\log n)$. \ 
+
+    Рассматривая префиксное накопление на BSP, граф prefix($n$) состоит Из
+
+    \begin{itemize}
+        \item верхнего подерева, вычисляемого от листьев к корню tree($n$); 
+        \item переноса значений от узлов верхнего поддерева к узлам нижнего; 
+        \item нижнего поддерева, вычисляемого от корня к листьям tree($n$). 
+    \end{itemize}
+
+    Оба поддерева можно вычислить предыдущим алгоритмом. Перенос значений задаёт $comm=O(n/p)$, $comp=O(n/p)$ и $sync=O(1)$, предполагая допуск $n\geq p^2$. 
+\end{alg}
+
+\begin{prob}
+    Даны массивы $a=[a_0, \ldots, a_{n-1}]$, $b=[b_0, \ldots, b_{n-1}]$. Нам нудно вычислить $c_{-1}=0$, а ещё лучше $c_i=a_i+b_i\cdot c_{i-1}$ для $i\leq 0 < n$. Ещё это можно записать в виде произведений матриц, но это так, чуть более красивая форма. Пусть $A_i$ - матрица $2 \times 2$, в верхней строке которой 1, 0, а во второй - $a_i$, $b_i$. $C_i$ - матрица $2 \times 1$, сверху - 1, снизу - $c_i$. Тогда суть рассматриваются рекурренты $C_k=A_k\ldots A_1A_0\cdot C_{-1}$. 
+\end{prob}
+
+\begin{alg}
+    Эта задача - суть предыдущая с префиксными накоплениями. С итоговым размером $O(n)$, глубиной $O(\log n)$. 
+\end{alg}
+
+\begin{prob}
+    Побитово складываем массивы. И переносим, а потом ещё и параллелим.
+\end{prob}
+
 \end{document}
