--- a/fun facts for tests/funfacts.mathanalys.tex
+++ b/fun facts for tests/funfacts.mathanalys.tex
@@ -115,7 +115,7 @@
 \end{defn}
 
 \begin{stat}
-    (Критерий Коши сходимости несобственного интеграла). Если функция $x\mapsto f(x)$ определена на промежутке $[a, \omega)$ и интегрируема на любом отрезке $[a, b]$, лежащем внутри, то интеграл $\int_a^\omega f(x)dx$ сходится тогда и только тогда, когда для любого $\varepsilon>0$ можно указать $B\in [a, \omega)$ так, что при юлбых $b_1, b_2\in [a, \omega)$ таких, что $B<b_1, b_2$ имеет место соотношение 
+    (Критерий Коши сходимости несобственного интеграла). Если функция $x\mapsto f(x)$ определена на промежутке $[a, \omega)$ и интегрируема на любом отрезке $[a, b]$, лежащем внутри, то интеграл $\int_a^\omega f(x)dx$ сходится тогда и только тогда, когда для любого $\varepsilon>0$ можно указать $B\in [a, \omega)$ так, что при любых $b_1, b_2\in [a, \omega)$ таких, что $B<b_1, b_2$ имеет место соотношение 
     \[
         \bigg| \int_{b_1}^{b_2}f(x)dx\bigg| < \varepsilon. 
     \]
@@ -138,7 +138,7 @@
 \end{stat}
 
 \begin{theorem}
-    (Теорема сравнения). Пусть функции $f(x)$ и $g(x)$ определены на промежутке $[a, \omega)$ и интегрируемы на любом его отрезке. Если на данном промежутке выполнено $0\leq f(x) \leq g(x)$, то из сходимости интеграла по $g$ следует сходимость интеграла по $f$, и наоборот. 
+    (Теорема сравнения). Пусть функции $f(x)$ и $g(x)$ определены на промежутке $[a, \omega)$ и интегрируемы на любом его отрезке. Если на данном промежутке выполнено $0\leq f(x) \leq g(x)$, то из сходимости несобственного интеграла по $g$ следует сходимость несобственного интеграла по $f$, и из расходимости несобственного интеграла f следует расходимость несобственного интеграла g. 
 \end{theorem}
 
 \begin{remark}
