1lekciya.minor.alg

--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -33,6 +33,9 @@
 \fancyfoot{}
 \newtheoremstyle{indented}{0 pt}{0 pt}{\itshape}{}{\bfseries}{. }{0 em}{ }
 
+\renewcommand\thesection{}
+\renewcommand\thesubsection{}
+
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Матосновы алгоритмов}
@@ -126,7 +129,7 @@
 
 \newpage
 
-\url{https://users.math-cs.spbu.ru/~okhotin/teaching/algorithms_2020/} - источник с конспектами А. С. Охотина, где всё в тысячу раз \textbf{Подробнее} и грамотнее. \\
+\url{https://users.math-cs.spbu.ru/~okhotin/teaching/algorithms_2020/} - источник с конспектами А. С. Охотина, где всё в тысячу раз подробнее и грамотнее. \\
 
 \hypertarget{t1}{Основные моменты}. 
 \tableofcontents
@@ -137,11 +140,11 @@
 
 На каждом билте можно нажимать на то, куда вам надо (кроме того, что с первой и восьмой лекции, пришлите мне, пожалуйста, кто-нибудь, записи с них). К билету относится то, что от метки, по которой вы перешли, и до слова \textbf{подробнее}, ссылка рядом с которым перекинет вас на подробный конспект Охотина, который этот билет содержит (иногда билет на соседних лекциях, тогда два \textbf{подробнее}, соответственно). \\
 
-1. Понятие алгоритма. Псевдокод. Хранение переменных при рекурсии. Машина с произвольным доступом к памяти. \\
+1. \hyperlink{d-1}{Понятие алгоритма. Псевдокод. Хранение переменных при рекурсии. Машина с произвольным доступом к памяти.} \\
 
-2. Метод «разделяй и властвуй». Быстрое умножение Карацубы, анализ времени работы. \\ 
+2. \hyperlink{t-1}{Метод «разделяй и властвуй». Быстрое умножение Карацубы, анализ времени работы.} \\ 
 
-3. Сортировка вставкой, сортировка слиянием. \hyperlink{d1.5}{Куча, действия над нею, сортировка кучей.} \\ 
+3. \hyperlink{t-3}{Сортировка вставкой, сортировка слиянием.} \hyperlink{d1.5}{Куча, действия над нею, сортировка кучей.} \\ 
 
 4. \hyperlink{r1}{«Быстрая сортировка», среднее время работы.} \\ 
 
@@ -185,11 +188,73 @@
 
 24. Сжатие данных методом Хаффмана. Арифметическое кодирование. \\ 
 
+\texttt{Билеты 22-24 см. в \href{https://users.math-cs.spbu.ru/~okhotin/teaching/algorithms_2020/okhotin_algorithms_2020_l8.pdf}{8 лекции}} \\
+
 25. \hyperlink{t35}{Сжатие данных со словарём, метод Лемпеля–Зива (LZ77, LZ78).} \\ 
 
 26. \hyperlink{t37}{Преобразование Берроуза–Вилера, его реализация.}
 
 \newpage
+
+\section{Лекция 1.} 
+
+\subsection{Билет 1.}
+
+\begin{defn}
+    \textcolor{magenta}{\hypertarget{d-1}{\textit{Алгоритм}}} - понятие, которое мы формально не определили, но согласно википедии, это - конечная совокупность точно заданных правил решения некоторого класса задач или набор инструкций, описывающих порядок действий исполнителя для решения определённой задачи. 
+\end{defn}
+
+\begin{defn}
+    \textcolor{magenta}{\hypertarget{d-2}{\textit{Псевдокод}}} - удобный способ записи алгоритма, который, конечно, невполне формален.
+\end{defn}
+
+\begin{stat}
+    Рассмотрим машину с произвольным доступом памяти (RAM). Это - абстрактная модель вычисления, которая состоит из ячеек с памятью (рисуем их в столбик и нумеруем целыми числами). Программа состоит из команд, и каждая команда имеет номер (скажем вообще, что они называются $x_k$). Пусть первая команда у нас пересылать что-то куда-то (\textit{оператор присваивания} $A=B$, где $B$ может быть константой, прямой адресацией (какая-то ячейка), или косвенной адресацией $x_{x_n}$, а $A$ может быть всем этим же, кроме константы). Следующее, что нам нужно арифметические действия $A=B*C$, где $*\in\{+, -, \cdot, /, \div\}$. \ 
+
+    Добавим также безусловный переход GOTO $n$ - переход к строке программы, аналогично можно задать GOTO $x_n$, которая может пересылать к строчке команды, которая имеет номер, хранящийся в этой ячейке. Также нам нужен условный оператор {IF; THEN}, и в конец добавим оператор HALT, которая будет говорить остановиться, и в целом, всё, что можно, мы уже умеем делать с помощью такой тривиальной вещи. \ 
+\end{stat}
+
+\begin{alg}
+    Рассмотрим \textcolor{magenta}{\hypertarget{d-3}{\textit{рекурсию}}}, а конкретнее, как мы храним значения. \textcolor{magenta}{\hypertarget{d-4}{\textit{Стэк}}} - абстрактная структура данных, у которой есть дно, вершина, и мы всегда можем положить элемент наверх, или вынести его. Для рекурсии стэк состоит из нескольких stack-frame-ов, которые соответствуют каждому вызову рекурсивной программы, которые могут содержать ячейки со значениями, номерами строк или номерами вызова.
+\end{alg}
+
+\subsection{Билет 2.}
+
+\begin{alg}
+    \textcolor{magenta}{\hypertarget{t-1}{\textbf{Быстрое умножение Карацубы}}}. Система идей, которая позволяет значительно ускорить умножение (скажем, двоичных) чисел. \ 
+
+    Идея первая: при умножени двузначных чисел, вместо того, чтобы совершать 4 умножения и нескольких сумм, совершим 3 умножения и несколько сумм и разностей. Пусть у нас есть числа $a_1a_0$ и $b_1b_0$. Тогда рассмотрим $(a_1+a_0)(b_1+b_0)$ и вычтем $(a_1b_1+a_0b_0)$, в итоге получим, что из результатов у нас выйдет собрать искомую сумму четырёх изначальных произведений. \ 
+     
+    Идея вторая: вообще, как мы могли заметить, нигде сильно нас не волновало, в какой системе счисления мы работали. Расмотрим большие числа $a_{n-1}\ldots a_{\frac{n}{2}}a_{\frac{n}{2}-1}\ldots a_0$ и $b_{n-1}\ldots b_{\frac{n}{2}}b_{\frac{n}{2}-1}\ldots b_0$ (двоичные), и разделим каждое из них пополам. Будем считать половины цифрами, тогда вот мы и свели к первой идее. \ 
+
+    Наконец, идея третья: для умножения $\frac{n}{2}$-значных чисел мы используем тот же самый алгоритм, вызывая его рекурсивно. 
+\end{alg}
+
+\begin{proof}
+    Пусть у нас есть 2 $n$-значных числа, которые алгоритм $K$ принимает на вход. Тогда у нас есть $C_1$ - $K$ от первых половин, $C_2$ - $K$ от вторых половин, и $C_3$ - $K$ от сумм цифр пары чисел. В итоге мы получаем $D=C_3-C_1-C_2$, и ответ $C_2 D C_1$. Нам нужно понять что-то про $T(n)$ - время на $n$-значных числах, $T(n)=3T(\frac{n}{2})+O(n)$. $3^i$ раз мы вычисляем $K$ от $\frac{n}{2^i}$-значных чисел, суммарно по этажам мы используем $\sum_{n=0}^{\log_2 n}C 3^i \frac{n}{2^i}$, тчо можон допреобразовать к $Cn\frac{(\frac{3}{2})^{\log_2 n+1}-1}{\frac{3}{2}-1}=Cn^{\log_2 3}$.
+\end{proof}
+
+\begin{alg}
+    В ходе рассуждений мы коснулись идеи \textcolor{magenta}{\hypertarget{t-2}{\textbf{метода ''разделяй и властвуй''}}}, который состоит в том, что мы разбиваем большую задачу на несколько подзадач, которые ещё и можно распараллелить, если так можно, и таким образом, решать меньшие подзадачи вместо решения одной объёмной.
+\end{alg}
+
+\subsection{Билет 3.}
+
+\begin{alg}
+    \textcolor{magenta}{\hypertarget{t-3}{\textbf{Сортировка вставкой}}}. Пусть у нас есть массив $a_i$. Рассмотрим первый элемент, он отсортирован. Рассмотрим теперь два элемента; они либо отсортированы, либо нет, тогда мы их меняем. И теперь работаем, фактически, по индукции. 
+\end{alg}
+
+\begin{stat}
+    Работает алгоритм за время $n^2$, причём зависит он от входных данных довольно сильно.
+\end{stat}
+
+\begin{alg}
+    \textcolor{magenta}{\hypertarget{t-4}{\textbf{Сортировка слиянием}}}. Разбиваем массив на две части, после чего отсортируем каждую половину и сольём. Делается это с помощью дополнительной памяти, ещё одного массива такого же размера, в который мы будем заносить итоговый результат слияния. Для самого слияния нам также нужны будут нужны указатели, которые двигаются и показывают на элементы, которые мы сравниваем. Тот, который получился меньше, заносится в новый массив, и указатель над ним сдвигается.
+\end{alg}
+
+\begin{stat}
+    Работает алгоритм за $n\log n$, раз уж $\sum_{i=0}^{\log_2 n} C 2^i \frac{n}{2^i}=c n \log_2 n$. 
+\end{stat}
 
 \section{Лекция 2.}
 
